fix nav menu close icon shift

--- a/css/style.css
+++ b/css/style.css
@@ -465,10 +465,10 @@ header .navbar {
         top: -100%;
         right: 0;
         width: 100%;
-        height: 25%;
+        height: 30%;
         transition: .3s;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 1.5rem;
     }
 
@@ -477,9 +477,13 @@ header .navbar {
         font-size: 2rem;
         color: var(--btn-bg-color);
         position: absolute;
-        top: 2.25rem;
+        top: .85rem;
         right: 1.75rem;
         cursor: pointer;
+    }
+
+    .btn {
+        box-shadow: none;
     }
 
     .nav_toggle {
@@ -583,7 +587,6 @@ header .navbar {
     .hero-btn {
         padding: .5rem 1.5rem;
         font-size: .75rem;
-        margin-bottom: 2rem;
     }
 
     .discord_content h1 {
@@ -719,5 +722,5 @@ header .navbar {
 
 /* SHOW MENU */
 .show-menu {
-    top: -2%;
+    top: 0;
 }
